--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
+    "expo-permissions": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -21,8 +23,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "expo-permissions": "~8.1.0",
-    "expo-image-picker": "~8.1.0"
+    "react-navigation": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
